--- a/views/login.html
+++ b/views/login.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>mercado liebre</title>
         <script src="https://kit.fontawesome.com/06a70b2dd1.js" crossorigin="anonymous"></script>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+      
         <link rel="stylesheet" href="../css/style.css">
         <style> </style>
     </head>
@@ -35,7 +35,7 @@
         </ul>
     </nav>
     <nav class="login">
-        <ul>
+        <ul  class="link">
             <li><a class="link"href="/registre"> Crear tu cuenta </a><i class="fa-solid fa-address-card"></i></li>
                         <li><a class="link"href="/login"> Ingresar </a><i class="fa-solid fa-right-to-bracket"></i></li>
                         <li><a class="link"href=""> Mis compras </a><i class="fa-solid fa-basket-shopping"></i></li>
@@ -49,12 +49,12 @@
     </header>
     <img class="banner" src="/img/img-home-banner.jpg" alt="">
     <main class="main-productos">
-        <from action="/">
+        <from action="/login">
             <input type="text" name="nombre de usuario">
-            <input type="passwore" name="passwore">
-          
-            <button type="submit" href="/">Enviar</button>
-        </from>>
+            <input type="password" name="password">
+          <a href="/"><button type="submit" >Enviar</button></a>
+            
+        </from>
     </main>
     <footer>
         <div class="div-footer">
@@ -79,7 +79,6 @@
     </footer>
 
 </body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </html>
 
 
