--- a/public/css/header.css
+++ b/public/css/header.css
@@ -1,10 +1,4 @@
-.header-general {
-background-color: var(--color-Amarillo);
-width: 100%;
-display: flex;
-flex-direction: column;
-align-items: flex-start;
-}
+.header-general {background-color: var(--color-Amarillo);width: 100%;display: flex;flex-direction: column;}
 .header-general img input .ifa-solid-fa-magnifying-glass {
 display: flex;
 border: 2px solid white;
@@ -57,9 +51,12 @@ background-color: white;
 
 }
 .ofertas  {
-display: none;
-/* margin-top: 0%; */
-text-decoration: none;
+
+display: none;
+
+/* margin-top: 0%; */
+
+text-decoration: none;
 }
 .botones a {
 
@@ -93,12 +90,20 @@ body {}
     justify-content: flex-end;
     margin: 0 0 0 8px;
 }
-.ofertas ul li{
-display: inline;
+.ofertas ul li a{
+/*display: inline;
 margin-top: 23%;
-margin: 0 0 0 12px;
+margin: 0 0 0 12px;*/
+text-decoration:none ;
+list-style: none;
 }
-.ofertas {display: inline;position: absolute;top: 33%;left: -3%;text-decoration: none;}
+.ofertas {
+    display: inline;
+    /* position: absolute; */
+    top: 43%;
+    /* left: 0%; */
+    text-decoration: none;
+    }
 .botones a {}
 
 .login {/* display: block; */display: inline;/* justify-content: flex-end; */align-items: center;margin-top: 10%;margin-left: 59%;}
