--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -4,31 +4,13 @@ display: flex;
 justify-content: center;
 flex-direction: column;
 }
-.h4-div-footer{
-display: flex;
-justify-content: center;
-}
+.h4-div-footer{display: flex;justify-content: center;font-size: 20px;}
 
-.fa-solid.fa-credit-card{
-display: flex;
-color: var(--color-Celeste);
-flex-direction: row;
-justify-content: space-around;
-}
+.fa-solid.fa-credit-card{display: flex;color: var(--color-Celeste);font-size: 22px;margin-top: 9px;flex-direction: row;justify-content: space-around;}
 
-.fa-solid.fa-gift{
-display: flex;
-color: var(--color-Celeste);
-flex-direction: row;
-justify-content: space-around;  
-}
+.fa-solid.fa-gift{display: flex;color: var(--color-Celeste);flex-direction: row;justify-content: space-around;font-size: 24px;}
 
-.fa-solid.fa-user-shield{
-display: flex;
-color: var(--color-Celeste);
-flex-direction: row;
-justify-content: space-around; 
-}
+.fa-solid.fa-user-shield{display: flex;color: var(--color-Celeste);font-size: 22px;flex-direction: row;justify-content: space-around;}
 
 .p-copy{
 font-size: 12px;
