--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,4 +1,4 @@
-
+|
 body {
 display: flex;
 flex-direction: column;
@@ -11,6 +11,7 @@ margin: 0;
 .banner{
 width: 100%;
 height: 70px;
+
 }
 
 h2{
@@ -124,6 +125,16 @@ flex-wrap: nowrap;
 /* PORTATIL DESKTO  */
 @media (min-width:769px){
 .body {}
+
+/*.link{
+    display: inline;
+}
+.link-login{
+    display: inline;
+}
+.link-registre{
+    display: inline;
+}*/
 
 .burger-menu {}
 
