--- a/views/login.html
+++ b/views/login.html
@@ -6,7 +6,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>mercado liebre</title>
         <script src="https://kit.fontawesome.com/06a70b2dd1.js" crossorigin="anonymous"></script>
-      
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
         <link rel="stylesheet" href="../css/style.css">
         <style> </style>
     </head>
@@ -36,9 +37,9 @@
     </nav>
     <nav class="login">
         <ul  class="link">
-            <li><a class="link"href="/registre"> Crear tu cuenta </a><i class="fa-solid fa-address-card"></i></li>
-                        <li><a class="link"href="/login"> Ingresar </a><i class="fa-solid fa-right-to-bracket"></i></li>
-                        <li><a class="link"href=""> Mis compras </a><i class="fa-solid fa-basket-shopping"></i></li>
+            <li><a id="no-mostrar" class="link-registre"href="/registre"> Crear tu cuenta </a><i id="registre" class="fa-solid fa-address-card"></i></li>
+                        <li><a id="no-mostrar" class="link-login"href="/login"> Ingresar </a><i  id="Ingresar " class="fa-solid fa-right-to-bracket"></i></li>
+                        <li><a class="link"href=""> Mis compras </a><i id="" class="fa-solid fa-basket-shopping"></i></li>
                         
                     </ul>
                 </nav>
@@ -49,12 +50,25 @@
     </header>
     <img class="banner" src="/img/img-home-banner.jpg" alt="">
     <main class="main-productos">
+        <div class="row">  
         <from action="/login">
-            <input type="text" name="nombre de usuario">
-            <input type="password" name="password">
-          <a href="/"><button type="submit" >Enviar</button></a>
+            <div class="input-group">
+                <div class="col-8 input-group my-5" >
+                    <div class="input-group-text">@</div>
+                    <input type="text" class="form-control" id="autoSizingInputGroup" placeholder="Nombre usuario">
+                </div>
+            <div class="col-8 input-group my-5">
+                <div class="input-group-text"></div>
+                <input type="password"  name="password" class="form-control" id="autoSizingInputGroup" placeholder="elegir tu contraseña">
+            </div>   
+            <label class="visually-hidden" for="autoSizingInputGroup"></label>
+
+          <a   class=" button btn btn-primary active left-5"  href="/"><button type="submit" >Enviar</button></a>
             
         </from>
+
+    </div>
+    </div>
     </main>
     <footer>
         <div class="div-footer">
@@ -77,6 +91,7 @@
         </div>
         <p class="p-copy">Copyright © 1999-2020 MercadoLiebre S.R.L</p>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
 </body>
 </html>
