--- a/views/registre.html
+++ b/views/registre.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>mercado liebre</title>
         <script src="https://kit.fontawesome.com/06a70b2dd1.js" crossorigin="anonymous"></script>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <link rel="stylesheet" href="../css/style.css">
         <style> </style>
     </head>
@@ -36,8 +36,8 @@
     </nav>
     <nav class="login">
         <ul>
-            <li><a class="link"href="/registre"> Crear tu cuenta </a><i class="fa-solid fa-address-card"></i></li>
-                        <li><a class="link-login"href="/login"> Ingresar </a><i class="fa-solid fa-right-to-bracket"></i></li>
+            <li><a class="link"href="/registre"> Crear tu cuenta </a><i id="registre" class="fa-solid fa-address-card"></i></li>
+                        <li><a class="link-login"href="/login"> Ingresar </a><i id="ingresar" class="fa-solid fa-right-to-bracket"></i></li>
                         <li><a class="link"href=""> Mis compras </a><i class="fa-solid fa-basket-shopping"></i></li>
                         
                     </ul>
@@ -49,59 +49,109 @@
     </header>
     <img class="banner" src="/img/img-home-banner.jpg" alt="">
     <main class="main-productos">
-        <html>
+        
+<div class="row">
 
-    <form action="/registre" method="">
-       <div>
-           <input type="text" name=" nombre completo"placeholder="Ingrese su Nombre y Apellido">  
-       </div>
-            <div>
-                <input type="text" name="nombre de usuario" placeholder="Usuario">
-            </div>
-<div>
-    <input class="form-control" type="email" name="email" placeholder="E-MAIL" >
-</div>
-<div>
-    <label for="email">Fecha de nacimiento</label>
-</div>
-<div>
-    <input type="date" name="fecha">
-</div>
-<div>
-    <input type="text" name="domicilio" placeholder="Domicilio" >
-</div>
-<div>
-    <input type="radio" name="compra" value="si">comprador
-</div>
-<div>
-    <input type="radio" name="compra" value="no">Vendedor
-</div>
-
-<div>
-    
-    <label for ="hobbies">Interes</label>
-    <input type="checkbox" name="interes" value="Electro">Electro
-    <input type="checkbox" name="interes" value="Mopda">Mopda
-    <input type="checkbox" name="interes" value="Hogar">Hogar
-    <input type="checkbox" name="interes" value="Jugeteria">Jugeteria
-    <input type="checkbox" name="interes" value="Vida sana">Vida sana"
-</div>
-<div>
-    <input type="file" name="avatar" accept="jpg" multiple>
-</div>
-<div>
-    <input type="password" name="password" placeholder="Elegi tu contraseña" >    
-    <input type="password" name="password" placeholder="Confirmar contraseña" >    
-</div>
+    <form  action="/login" method="">
+        
+        <div class="form-control my-3">
+            <label class="visually-hidden" for="autoSizingInputGroup">Ingrese su Nombre y Apellido</label>
+            
+            <div class="input-group">
+                
+                <input type="text" class="form-control" id="autoSizingInputGroup" placeholder="Ingrese su Nombre y Apellido">
            
+                <label class="visually-hidden" for="autoSizingInputGroup">Nombre usuario</label>
+                <div class="input-group  my-3" >
+                    <div class="input-group-text">@</div>
+                    <input type="text" class="form-control" id="autoSizingInputGroup" placeholder="Nombre usuario">
+                </div>
+                <label class="visually-hidden" for="autoSizingInputGroup">email</label>
+                <div class="input-group">
+                    <div class="input-group-text"></div>
+                    <input type="text" class="form-control" id="autoSizingInputGroup" placeholder="email">
+                </div>
+                <div class="col-12 " >
+                    <h2>Fecha de nacimiento</h2>
+                </div>
+                <label class="visually-hidden" for="autoSizingInputGroup"></label>
+                <div class="  input-group my-3">
+                    <input type="date" class="form-control  " id="autoSizingInputGroup" placeholder="date">
+                </div>
+                <label class="visually-hidden" for="autoSizingInputGroup">domiocilio</label>
+                <div class=" col-12 input-group my-3" >
+                    <div class="input-group-text"></div>
+                    <input type="text" class="form-control  " id="autoSizingInputGroup" placeholder="domicilo">
+                </div>
+                <H2 class="col-12 font-size-base my-3"  "row" "">Perfil del usuario</H2>
+                <div  class = "col-6 6-sm 4-lg" > 
+                    <label for="comprador"></label>
+                    <input type="radio" name="compra" value="si">comprador
+                </div>
+                <div class="col-6 6-sm 4-lg">
+                    <label for="vendedor"></label>
+                    <input type="radio" name="compra" value="no">Vendedor
+                </div>
+               <div  class="col-12">
+                <h2>Intereses <h2>
+                </div>  
+                <div class = " col-12 form-check " >
+                   
+                        <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+                        <label class="form-check-label" for="defaultCheck1">
+                          Electro
+                        </label>
+                    </div>
+                    <div class = "col-12 form-check "  >
+                        <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+                        <label class="form-check-label" for="defaultCheck1">
+                          Moda
+                        </label>
+                    </div>
+                    <div class = "col-12 form-check " >
+                        <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+                        <label class="form-check-label" for="defaultCheck1">
+                          Yoga
+                        </label>
+                    </div>
+                    <div class = "col-12 form-check " >
+                        <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+                        <label class="form-check-label" for="defaultCheck1">
+                         Jugeteria
+                        </label>
+                    </div >
+                    <div class = "col-12 form-check " >
+                        <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+                        <label class="form-check-label" for="defaultCheck1">
+                        Vida sana
+                        </label>
+                </div>
+                <div class="col-12 6-sm 4-lg my-3">
+                <input type="file" name="avatar" accept="jpg" multiple>
+                </div>
+                <div class="col-12 6-sm 4-lg my-3 ">
 
-<div>
-
-    <button type="reset" value="borrar" ></button>
-    <button type="submit" href="/login" value="Enviar" ></button>
-</div>
-
-    </form>
+                </div>
+                <label class="visually-hidden" for="autoSizingInputGroup"></label>
+                <div class="input-group">
+                    <div class="input-group-text"></div>
+                    <input type="password"  name="password" class="form-control" id="autoSizingInputGroup" placeholder="elegir contraseña">
+                </div>   
+                <label class="visually-hidden" for="autoSizingInputGroup"></label>
+                <div class=" col-12 input-group my-3 ">
+                    <div class="input-group-text"></div>
+                    <input type="password"  name="password" class="form-control" id="autoSizingInputGroup" placeholder="repetir contraseña">
+                </div>    
+                
+            </div>
+                
+                
+                <button class=" button flex diretion-end " type="submit"  name="Enviar" href ="login.html" >Enviar</button>
+                <button class="button  flex diretion-end  " type="reset" name="borrar" >Borrar</button>
+                
+                
+            </form>
+        </div>
 
 
     </main>
@@ -127,8 +177,8 @@
         <p class="p-copy">Copyright © 1999-2020 MercadoLiebre S.R.L</p>
     </footer>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </html>
 
 
