--- a/public/css/home.css
+++ b/public/css/home.css
@@ -7,11 +7,7 @@ width: 100%;
 margin: 0;
 }
 
-.banner{
-width: 100%;
-height: 70px;
-
-}
+.banner{width: 103%;height: 70px;}
 
 h2{
 font-size: 16px;
@@ -57,14 +53,7 @@ margin: 0px;
 display: none;
 }
 
-.main-productos{
-display: flex;
-width: 90%;
-margin-left: 42px;
-box-shadow: 0px, 0, 10px rgba(100, 100, 100);
-flex-wrap: wrap;
-flex-direction: column;
-}
+.main-productos{display: flex;width: 90%;margin-left: 16px;box-shadow: 0px, 0, 10px rgba(100, 100, 100);flex-wrap: wrap;flex-direction: column;}
 .seccion-art-1{
     
 }
@@ -101,18 +90,14 @@ body {}
 }
 
 .descuento{
-    margin-left: 29%;
-    margin-top: 4%;
+    margin-left: 34%;
+    margin-top: 5%;
 }
 
 .h4-div-seccion-1{
 display: block;
 }
-.main-productos{
-display: flex;
-flex-direction: row;
-flex-wrap: nowrap;
-}
+.main-productos{display: flex;flex-direction: row;flex-wrap: nowrap;margin-left: 18%;}
 .seccion-art-1{
     
 }
@@ -150,21 +135,15 @@ padding: 7px;
 .detalles{
 width: 98%;
 }
-.fa-solid.fa-truck{width: 10%;font-size: 12px;height: 43px;height: 22;}
+.fa-solid.fa-truck{width: 10%;font-size: 9px;height: 23px;height: 22;}
 .precio{}
 
 .descuento{}
 
 .h4-div-seccion-1{}
 
-.main-productos{
-display: flex;
-flex-wrap: wrap;
-flex-direction: row;
-}
-.seccion-art-1{
-
-}
+.main-productos{display: flex;flex-wrap: wrap;flex-direction: row;margin-left: 26%;}
+.seccion-art-1{margin-right: 17%;margin-block-end: 1px;gap: 135px;}
 
 .main-productos img {
 }
