--- a/views/login.html
+++ b/views/login.html
@@ -7,7 +7,7 @@
         <title>mercado liebre</title>
         <script src="https://kit.fontawesome.com/06a70b2dd1.js" crossorigin="anonymous"></script>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
+       
         <link rel="stylesheet" href="../css/style.css">
         <style> </style>
     </head>
@@ -50,21 +50,25 @@
     </header>
     <img class="banner" src="/img/img-home-banner.jpg" alt="">
     <main class="main-productos">
-        <div class="row">  
+        <div class="row " >  
         <from action="/login">
             <div class="input-group">
-                <div class="col-8 input-group my-5" >
-                    <div class="input-group-text">@</div>
+                <div class="col-10 mb-3 justify-conten-center input-group my-5" >
+                  
                     <input type="text" class="form-control" id="autoSizingInputGroup" placeholder="Nombre usuario">
                 </div>
-            <div class="col-8 input-group my-5">
-                <div class="input-group-text"></div>
-                <input type="password"  name="password" class="form-control" id="autoSizingInputGroup" placeholder="elegir tu contraseña">
+            <div class="col-10 mb-3 justify-conten-center input-group my-5">
+               
+                <input type="password"  name="password" class="form-control" id="autoSizingInputGroup" placeholder="elegir tu contraseña  " >
             </div>   
             <label class="visually-hidden" for="autoSizingInputGroup"></label>
 
-          <a   class=" button btn btn-primary active left-5"  href="/"><button type="submit" >Enviar</button></a>
-            
+            <div class="col-12 d-grid gap-2 ">
+                <button class="btn btn-primary" type="button" href="/" >
+                    Enviar <span class="badge bg-secondary"></span></button>
+               
+              </div>
+           
         </from>
 
     </div>
