--- a/public/css/home.css
+++ b/public/css/home.css
@@ -7,7 +7,9 @@ width: 100%;
 margin: 0;
 }
 
-.banner{width: 103%;height: 70px;}
+.banner{
+width: 103%;
+height: 70px;}
 
 h2{
 font-size: 16px;
@@ -53,15 +55,26 @@ margin: 0px;
 display: none;
 }
 
-.main-productos{display: flex;width: 90%;margin-left: 16px;box-shadow: 0px, 0, 10px rgba(100, 100, 100);flex-wrap: wrap;flex-direction: column;}
+.main-productos{
+display: flex;
+width: 90%;
+margin-left: 16px;
+box-shadow: 0px, 0, 10px rgba(100, 100, 100);
+flex-wrap: wrap;
+flex-direction: column;}
 .seccion-art-1{
     
 }
-.main-productos img {width: 76%;margin: 21px;
+
+.main-productos img {
+width: 76%;
+margin: 21px;
 }
+
 #camiom{
-    height: 12%;
+height: 12%;
 }
+
 /* TABLET */
 @media (min-width:426px) {
 
@@ -72,32 +85,38 @@ body {}
 .subtitulos{}
 
 .articulos{
-    position: relative;
+position: relative;
 }
 
 .detalles{}
 
 .fa-solid.fa-truck{
-    position: absolute;
-    margin-left: 62%;
-    margin-top: -5%;
-    width: 29px;
+position: absolute;
+margin-left: 62%;
+margin-top: -5%;
+width: 29px;
 }
 
 .precio{
-    position: absolute;
-    margin-top: 4%;
+position: absolute;
+margin-top: 4%;
 }
 
 .descuento{
-    margin-left: 34%;
-    margin-top: 5%;
+margin-left: 34%;
+margin-top: 5%;
 }
 
 .h4-div-seccion-1{
 display: block;
 }
-.main-productos{display: flex;flex-direction: row;flex-wrap: nowrap;margin-left: 18%;}
+
+.main-productos{
+display: flex;
+flex-direction: row;
+flex-wrap: nowrap;
+margin-left: 18%;
+}
 .seccion-art-1{
     
 }
@@ -110,15 +129,7 @@ display: block;
 @media (min-width:769px){
 .body {}
 
-/*.link{
-    display: inline;
-}
-.link-login{
-    display: inline;
-}
-.link-registre{
-    display: inline;
-}*/
+
 
 .burger-menu {}
 
@@ -135,15 +146,28 @@ padding: 7px;
 .detalles{
 width: 98%;
 }
-.fa-solid.fa-truck{width: 10%;font-size: 9px;height: 23px;height: 22;}
+.fa-solid.fa-truck{
+width: 10%;
+font-size: 9px;
+height: 23px;
+height: 22;}
 .precio{}
 
 .descuento{}
 
 .h4-div-seccion-1{}
 
-.main-productos{display: flex;flex-wrap: wrap;flex-direction: row;margin-left: 26%;}
-.seccion-art-1{margin-right: 17%;margin-block-end: 1px;gap: 135px;}
+.main-productos{
+display: flex;
+flex-wrap: wrap;
+flex-direction: row;
+margin-left: 26%;
+}
+.seccion-art-1{
+margin-right: 17%;
+margin-block-end: 1px;
+gap: 135px;
+}
 
 .main-productos img {
 }
