haciendo cambios en los estilos de css

--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -57,8 +57,6 @@ margin-bottom: 10px;
 
 .h4-div-footer{}
 
-.text-footer{
-display: flex;
-}
+.text-footer{display: flex;justify-content: center;}
 .p-copy{}
 }
