--- a/views/registre.html
+++ b/views/registre.html
@@ -54,7 +54,7 @@
 
     <form  action="/login" method="">
         
-        <div class="form-control my-4">
+        <div class=" col-12 md-4 lg-4 form-control my-4">
             <label class="visually-hidden" for="autoSizingInputGroup">Ingrese su Nombre y Apellido</label>
             
             <div class="input-group">
@@ -62,30 +62,30 @@
                 <input type="text" class="form-control" id="autoSizingInputGroup" placeholder="Ingrese su Nombre y Apellido">
            
                 <label class="visually-hidden" for="autoSizingInputGroup">Nombre usuario</label>
-                <div class="input-group  my-4" >
+                <div class=" col-12 md-4 lg-4  input-group  my-4 " >
                     <div class="input-group-text">@</div>
                     <input type="text" class="form-control" id="autoSizingInputGroup" placeholder="Nombre usuario">
                 </div>
-                <label for="floatingInputInvalid">Invalid input</label>
+                <label for="floatingInputInvalid"></label>
                 <label class="visually-hidden" for="autoSizingInputGroup">email</label>
-                <div class="input-group">
+                <div class="col-12 md-4 lg-4  input-group">
                     <div class="input-group-text"></div>
                     <input type="text" class="form-control" id="autoSizingInputGroup" placeholder="email">
                 </div>
-                <div class="col-12 md-8 lg-8 " >
+                <div class="col-12 md-4 lg-4 " >
                     <h2>Fecha de nacimiento</h2>
                 </div>
                 <label class="visually-hidden" for="autoSizingInputGroup"></label>
-                <div class="  input-group my-4">
+                <div class="col-12 md-4 lg-4   input-group my-4">
                     <input type="date" class="form-control  " id="autoSizingInputGroup" placeholder="date">
                 </div>
                 <label class="visually-hidden" for="autoSizingInputGroup">domiocilio</label>
-                <div class=" col-12 md-8 lg-8 input-group my-4" >
+                <div class=" col-12 md-4 lg-4 input-group my-4" >
                     <div class="input-group-text"></div>
                     <input type="text" class="form-control  " id="autoSizingInputGroup" placeholder="domicilo">
                 </div>
                 <H2 class="col-12 font-size-base my-4"  "row" "">Perfil del usuario</H2>
-                <div  class = "col-6 6-sm 4-lg" > 
+                <div  class = "col-6 sm-6 lg-4" > 
                     <label for="comprador"></label>
                     <input type="radio" name="compra" value="si">comprador
                 </div>
@@ -148,8 +148,8 @@
                 
                 <div  class=" button md-8 lg-8 d-grid gap-2 d-md-flex justify-content-md-end">
 
-                    <button class=" button flex diretion-end  " type="submit"  name="Enviar" href ="login.html" >Enviar</button>
-                    <button class="button  flex diretion-end  " type="reset" name="borrar" >Borrar</button>
+                    <button class=" button flex diretion-end btn btn-primary " type="submit"  name="Enviar" href ="login.html" >Enviar</button>
+                    <button class="button  flex diretion-end btn btn-secondary " type="reset" name="borrar" >Borrar</button>
                 </div>
                 
                 
