--- a/public/css/home.css
+++ b/public/css/home.css
@@ -32,15 +32,7 @@ width: 254px;
 border-top: 1px solid #8080802e;
 }
 
-.fa-solid.fa-truck {
-border: 1px solid green;
-border-radius: 50%;
-width: 14%;
-padding: 2%;
-font-size: 12px;
-margin-left: 0%;
-color: green;
-}
+.fa-solid.fa-truck {border: 1px solid green;border-radius: 50%;width: 13%;padding: 2%;font-size: 12px;margin-left: 3%;color: green;}
 
 .precio{
 margin: 0px;
@@ -111,12 +103,7 @@ margin-top: 5%;
 display: block;
 }
 
-.main-productos{
-display: flex;
-flex-direction: row;
-flex-wrap: nowrap;
-margin-left: 18%;
-}
+.main-productos{display: flex;flex-direction: row;flex-wrap: nowrap;margin-left: 7%;gap: 34px;}
 .seccion-art-1{
     
 }
@@ -136,16 +123,11 @@ margin-left: 18%;
 .banner{
 height: 188px;
 }
-.subtitulos{}
-.articulos{
-box-shadow: 1px 6px 10px  #ebebeb;
-width: 24%;
-display: inline-block;
-padding: 7px;
+.subtitulos{
+    height: max-content;
 }
-.detalles{
-width: 98%;
-}
+.articulos{box-shadow: 1px 6px 10px  #ebebeb;width: 24%;display: flex;/* display: inline-block; */padding: 7px;margin-left: 3px;flex-direction: column;}
+.detalles{width: 97%;}
 .fa-solid.fa-truck{
 width: 10%;
 font-size: 9px;
@@ -157,16 +139,16 @@ height: 22;}
 
 .h4-div-seccion-1{}
 
-.main-productos{
-display: flex;
-flex-wrap: wrap;
-flex-direction: row;
-margin-left: 26%;
-}
+.main-productos{display: flex;flex-wrap: wrap;align-content: space-around;justify-content: space-evenly;}
 .seccion-art-1{
-margin-right: 17%;
-margin-block-end: 1px;
-gap: 135px;
+    margin-right: 4%;
+    margin-top: 10px;
+    display: flex;
+    /* width: 100%; */
+    /* margin-block-end: 2px; */
+    /* flex-wrap: wrap; */
+    /* align-items: stretch; */
+    /* flex-direction: row; */
 }
 
 .main-productos img {
